@@ -34,7 +34,7 @@ public abstract class TabNavigationWidgetMixin {
             return;
         }
         RenderSystem.enableBlend();
-        context.drawTexture(Identifiers.HEADER_SEPARATOR_TEXTURE, 0, this.grid.getY() + this.grid.getHeight() - 2, 0.0f, 0.0f, this.tabButtons.getFirst().getX(), 2, 32, 2);
+        context.drawTexture(Identifiers.HEADER_SEPARATOR_TEXTURE, 0, this.grid.getY() + this.grid.getHeight() - 2, 0.0f, 0.0f, this.tabButtons.get(0).getX(), 2, 32, 2);
         int i = this.tabButtons.get(this.tabButtons.size() - 1).getRight();
         context.drawTexture(Identifiers.HEADER_SEPARATOR_TEXTURE, i, this.grid.getY() + this.grid.getHeight() - 2, 0.0f, 0.0f, this.tabNavWidth, 2, 32, 2);
         RenderSystem.disableBlend();
